# duiwen

./: index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  database.sql  tauri.conf.json
src-tauri/locales/: en-US.yml  zh-CN.yml
src-tauri/src/: main.rs
src-tauri/src/cmd/: ipc.rs  mod.rs  push.rs
src-tauri/src/config/: ctx.rs  error.rs  message.rs  mod.rs
src-tauri/src/event/: mod.rs  setting.rs
src-tauri/src/model/: entity.rs  mod.rs  repository.rs  vo.rs
src-tauri/src/service/: article.rs  core.rs  drawer.rs  folder.rs  mod.rs  record.rs  sequence.rs
src-tauri/src/system/: cfg.rs  dir.rs  init.rs  mod.rs
src-tauri/src/utils/: mod.rs
src/common/: event.js  i18n.js  lang.json  markdown.js  message_hub.js  router.js  utils.js
src/components/: Breadcrumbs.vue  CreateFolderDialog.vue  ExtraDocumentPanel.vue  ExtraDocumentPanelBasicInfo.vue  ExtraDocumentPanelLinkedFolder.vue  ExtraFolderPanel.vue  ExtraFolderPanelInfo.vue  ExtraFolderPanelLinkedDocuments.vue  ExtraFolderPanelLinkedFolders.vue  FavoritesSide.vue  GroupCardCounter.vue  GroupCardDesc.vue  GroupCardHistoryRecord.vue  GroupCardHotFolder.vue  MainEditor.vue  MainEmpty.vue  MainFolderGraph3D.vue  MainGroupDetail.vue  MainMind.vue  MainSide.vue  SearchFolderForm.vue  SideFolderResult.vue  SideGroupBoard.vue  SideItemBack.vue  SideItemDocument.vue  SideItemFolder.vue  SideResultEmpty.vue  SideSearch.vue  SideSearchResult.vue  StatusBarDocumentBasicInfo.vue  StatusBarDocumentLinkedFolder.vue  StatusBarDocumentSave.vue  TitleBar.vue  (+7 more)
(+26 files in other folders)
