[package]
name = "duiwen"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all", "devtools", "dialog", "notification"] }
window-shadows = "0.2.1"

# 数据库
rbatis = "4.0.49"
rbdc-sqlite = "0.1.15"
rbs = "0.1.15"

# 日志
log = "0.4.17"
fast_log = { version = "1.5.51", features = ["zip"] }
fastdate = "0.1.33"

# 国际化
rust-i18n = "1.1.1"
once_cell = "1.17.0"
sys-locale = "0.2.3"

# 第三方工具
thiserror = "1.0.38"
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"

# 文件夹处理
walkdir = "2.3.2"
fs-mistrust = "0.6.1"

# 事件驱动库
event-emitter-rs = "0.1.4"

async-recursion = "1.0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
